# energy-prices

./: .gitattributes  .gitignore  DATA.md  LICENSE  Makefile  README.md  index.html  monitoring.html  monitoring.js  pyproject.toml  script.js  styles.css  translations.json
.github/workflows/: backfill.yml  daily_forecast.yml  retrain.yml
data/: actuals_latest.json  forecast_history.json  forecast_latest.json  metadata.json  model_errors.json  retrain_history.json
data/snapshots/: features_02572f2c.parquet  features_247ccd98.parquet  features_6f9620ae.parquet  features_843c81c5.parquet  features_8f389d5c.parquet  features_8f6fb5a7.parquet  features_97a5de8e.parquet  features_9be23385.parquet  source_2026-02-28.parquet  source_2026-03-01.parquet  source_2026-03-02.parquet  source_2026-03-03.parquet  source_2026-03-04.parquet  source_2026-03-05.parquet  source_2026-03-06.parquet  source_2026-03-07.parquet  source_2026-03-08.parquet  source_2026-03-09.parquet  source_2026-03-10.parquet  source_2026-03-11.parquet  source_2026-03-12.parquet  source_2026-03-13.parquet  source_2026-03-14.parquet  source_2026-03-15.parquet  source_2026-03-16.parquet  (+37 more)
deploy/: index.html  script.js  styles.css  translations.json
docs/: architecture.md  mlflow_dataset_notes.md
notebooks/: Baselines.ipynb  boosted_search.ipynb  dataset_analysis.ipynb  feature_selection.ipynb  greedy_blend_selection.ipynb  linear_search.ipynb  model_selection.ipynb  stacking_blending.ipynb  startup.py
scripts/: backfill_history.py  compare_cutoffs.py
src/: cli.py  monitoring.py  test.ipynb
(+74 files in other folders)
